Updates for Java 10 compatibility